tdf#96890 The file "groupuinames.xml" is invalid XML

Change-Id: I623d5bbae5a016569f5c1f8174c22ee97db94467
Signed-off-by: melikeyurtoglu <aysemelikeyurtoglu@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/24539
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>