sfx2/source/doc/doctemplateslocal.cxx
@@ -63,7 +63,7 @@ void SAL_CALL DocTemplLocaleHelper::WriteGroupLocalizationSequence( const uno::R
     ::comphelper::AttributeList* pRootAttrList = new ::comphelper::AttributeList;
     uno::Reference< xml::sax::XAttributeList > xRootAttrList( pRootAttrList );
     pRootAttrList->AddAttribute(
-        "xmlns",
+        "xmlns:groupinames",
         aCDATAString,
         "http://openoffice.org/2006/groupuinames" );
 
